@@ -54,6 +54,15 @@ It is available from http://www.isc.org as a separate download.])
 		;;
 esac
 
+AC_ARG_ENABLE(buffer_useinline, AS_HELP_STRING([--enable-buffer-useinline],
+	      [define ISC_BUFFER_USEINLINE when compiling [[default=yes]]]),
+	      if test yes = "${enable}"
+	      then
+		      AC_DEFINE([ISC_BUFFER_USEINLINE], [1],
+			        [Define if you want to use inline buffers])
+	      fi,
+	      AC_DEFINE([ISC_BUFFER_USEINLINE], [1]))
+
 AC_ARG_ENABLE(warn_shadow,
 	      AS_HELP_STRING([--enable-warn-shadow],
 			     [turn on -Wshadow when compiling]))
