@@ -104,12 +104,11 @@
 #include <isc/types.h>
 
 /*!
- * To make many functions be inline macros (via \#define) define this to 1.
- * To use continue to use them as functions define this to 0.
- */
-#ifndef ISC_BUFFER_USEINLINE
-#define ISC_BUFFER_USEINLINE 1
-#endif
+ * To make many functions be inline macros (via \#define) define this.
+ * If it is undefined, a function will be used.
+  */
+/* #define ISC_BUFFER_USEINLINE */
+
 
 ISC_LANG_BEGINDECLS
 
@@ -977,7 +976,7 @@ ISC_LANG_ENDDECLS
 		_cp[3] = _val2; \
 	} while (0)
 
-#if ISC_BUFFER_USEINLINE
+#if defined(ISC_BUFFER_USEINLINE)
 #define isc_buffer_init			ISC__BUFFER_INIT
 #define isc_buffer_initnull		ISC__BUFFER_INITNULL
 #define isc_buffer_invalidate		ISC__BUFFER_INVALIDATE
